@@ -19,6 +19,9 @@ Revision history for Tesla-API
     - Moved call to _authentication_code() from _access_token() to
       _access_token_generate()
     - Rename _access_token_validate() to _access_token_valid()
+    - _tesla_api_call() now returns $status, $code and
+      $response->decoded_content
+    - Add tests for nearly the entire authentication and access token routines
 
 0.10    2022-04-11
     - Remove erroneous call example from Tesla::Vehicle from the SYNOPSIS
